Fixed mobile whitespace and button text bugs

--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,7 @@ a {
     position: absolute;
     width: 100%;
     margin: -10rem 0 0 -10rem;
-    padding: 0 10rem 1rem 10rem;
+    padding: 0 0 1rem 10rem;
     padding-top: 10rem;
     background: var(--main-yellow);
     -webkit-font-smoothing: antialiased;
@@ -292,6 +292,7 @@ radial-gradient(at 35% 15%, hsla(2,0%,100%,1) 0px, transparent 50%);
     flex-direction:row-reverse;
 }
 
+/*
 .projects-item-section button {
     margin: auto auto 1rem 1rem;
     height: 3rem;
@@ -299,6 +300,21 @@ radial-gradient(at 35% 15%, hsla(2,0%,100%,1) 0px, transparent 50%);
     font-size: 1rem;
     background-image: linear-gradient(90deg, var(--main-blue), var(--secondary-blue) 300%);
     color: white;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+*/
+
+.button {
+    margin: auto 0.5rem;
+    height: 3rem;
+    width: 4rem;
+    background-image: linear-gradient(90deg, var(--main-blue), var(--secondary-blue) 300%);
+    color: white;
+    line-height: 2.9rem;
+    font-size: 1rem;
+    text-align: center;
+    text-decoration: none;
     border-radius: 0.2rem;
     cursor: pointer;
 }
@@ -349,6 +365,7 @@ radial-gradient(at 35% 15%, hsla(2,0%,100%,1) 0px, transparent 50%);
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: 50px;
     gap: 0.5rem;
+    grid-row-end:
 }
 
 .card {
@@ -405,14 +422,14 @@ label {
 
 input {
     height: 3rem;
-    width: 100%;
+    width: 95%;
     font-size: 1.5rem;
     border-radius: 0.2rem;
 }
 
 #input-message {
     height: 10rem;
-    width: 100%;
+    width: 95%;
     font-size: 1.5rem;
     font-family: inherit;
     border-radius: 0.2rem;
@@ -737,8 +754,4 @@ footer {
     form {
         width: 40rem;
     }
-}
-
-@media only screen and (orientation: landscape) {
-    
 }
